kubernetes/apps/observability/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: kubernetes.svg
    gethomepage.dev/description: Kubernetes UI
spec:
  hostnames:
    - headlamp.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
